--- a/.github/workflows/timestamp.yml
+++ b/.github/workflows/timestamp.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
     - name: Get Timestamp
-      uses: nanzm/get-time-action@v2.0
+      run: echo "TIME=$(date +%s)" >> "$GITHUB_OUTPUT"
     - name: Create timestamp file
       id: time
       env:
