--- a/.github/workflows/timestamp.yml
+++ b/.github/workflows/timestamp.yml
@@ -15,7 +15,9 @@ jobs:
       id: time
       env:
         TIME: ${{ steps.time.outputs.time }}
+        ALL: ${{ join(steps.time.outputs.*, '\n') }}
       run: |
+        echo $ALL
         echo $TIME > timestamp
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v6
