--- a/.github/workflows/timestamp.yml
+++ b/.github/workflows/timestamp.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
     - name: Get Timestamp
-      run: echo "::set-output name=time::$(date +%s)"
+      run: echo "time=Thing" >> "$GITHUB_OUTPUT"
     - name: Create timestamp file
       id: time
       env:
